Refactoring complet de l'API : suppression des éléments de présentation et configuration MVC